--- a/variables.tex
+++ b/variables.tex
@@ -10,14 +10,14 @@
 \begin{tabular}{c|l}
 \textbf{Name} & \textbf{Value} \\
 \hline
-is\_pulsed & is reactor pulsed or steady-state \\
+is\_pulsed & Is reactor pulsed or steady-state \\
 $H$ & Enhancement factor for ELMy H-mode scaling \\
 $Q$ & Physics Gain ($P_F/P_H$) \\
 $\varepsilon$ & Inverse aspect ratio \\
 $\kappa_{95}$ &  Elongation at 95 flux surface \\
 $\delta_{95}$ &  Triangularity at 95 flux surface \\
-$\nu_n$ &  Parabolic density peaking factor \\
-$\nu_T$ &  Parabolic temperature peaking factor \\
+$\nu_n$ &  Density peaking factor \\
+$\nu_T$ &  Temperature peaking factor \\
 $Z_{eff}$ & Effective charge \\
 $f_D$ & Dilution factor \\
 $A$ & Average mass number (in amus) \\
@@ -26,9 +26,9 @@ $\rho_m$ & Normalized radius of current peak (interchangeable with $l_i$) \\
 $N_G$ & Greenwald density fraction \\
 $\eta_T$ & Thermal efficiency of the reactor \\
 $\eta_{RF}$ &  Efficiency of the RF antenna \\
-$\tau_{FT}$ &  Time of flattop of reactor pulse \\
+$\tau_{FT}$ &  Time of flattop for reactor pulse \\
 $B_{CS}$ &  Strength of magnetic field in central solenoid \\
-$(\beta_N)_{max}$ &  Max allowed normalized beta normal \\
+$(\beta_N)_{max}$ &  Maximum allowed normalized beta normal \\
 $(q_{\replaced{*}{95}})_{max}$ & Minimum allowed safety factor \\
 $(P_W)_{max}$ & Maximum allowed wall loading power per surface area
 \end{tabular}
@@ -71,7 +71,7 @@ $q_*$ & Kink safety factor \\
 \volume & Tokamak volume in cubic meters \\
 $f_{BS}$ & Bootstrap current fraction \\
 $f_{CD}$ & Current drive fraction \\
-$f_{ID}$ & Indirect drive current fraction \\
+$f_{ID}$ & Inductive current fraction \\
 $\overline p$ & Volume-averaged plasma pressure \\
 $\langle \sigma v \rangle$ & Bosch-Hale fusion reactivity \\
 $R_P$ & Plasma resistance \\
